--- a/src/app/views/widgets/widgets-dropdown/widgets-dropdown.component.html
+++ b/src/app/views/widgets/widgets-dropdown/widgets-dropdown.component.html
@@ -2,14 +2,19 @@
   <c-col sm="6" xl="3">
     <c-widget-stat-a
       color="primary"
-      [title]="'Users'"
+      [title]="'Readings'"
     >
+    <!-- <div *ngFor="let item of data"> -->
       <ng-template cTemplateId="widgetValueTemplate" ngPreserveWhitespaces>
-        26K
+         <span> {{item.length}} </span> 
+         <br/>
+         <span>times</span>
+    <!-- <p>Max Temperature: {{ temperatureRange?.max }}°C</p> -->
         <span class="fw-normal" style="font-size: 12px;">
           (-12.4% <svg cIcon name="cilArrowBottom" size="sm"></svg>)
         </span>
       </ng-template>
+      <!-- </div> -->
       <ng-template cTemplateId="widgetActionTemplate">
         <c-dropdown alignment="end" variant="btn-group">
           <button [caret]="false" cButton cDropdownToggle class="p-0 text-white" color="transparent">
@@ -35,11 +40,13 @@
   </c-col>
   <c-col sm="6" xl="3">
     <c-widget-stat-a
-      [title]="'Income'"
+      [title]="'Temperature'"
       color="info"
     >
       <ng-template cTemplateId="widgetValueTemplate" ngPreserveWhitespaces>
-        <span>$6.200</span>
+        <span>Temperature Range:  </span>
+        <br/>
+        <span> {{ temperatureRange?.min }}°C - {{ temperatureRange?.max }}°C</span>
         <span class="fw-normal" style="font-size: 12px;">
           (40.9%<svg cIcon name="cilArrowTop" size="sm"></svg>)
         </span>
@@ -64,11 +71,13 @@
   </c-col>
   <c-col sm="6" xl="3">
     <c-widget-stat-a
-      [title]="'Conversion Rate'"
+      [title]="'Valtage'"
       color="warning"
     >
       <ng-template cTemplateId="widgetValueTemplate" ngPreserveWhitespaces>
-        <span>2.49</span>
+        <span>Voltage Range: </span>
+        <br/>
+        <span> {{ voltageRange?.min }}°C - {{ voltageRange?.max }}°C</span>
         <span class="fw-normal" style="font-size: 12px;">
           (84.7% <svg cIcon name="cilArrowTop" size="sm"></svg>)
         </span>
@@ -93,11 +102,13 @@
   </c-col>
   <c-col sm="6" xl="3">
     <c-widget-stat-a
-      [title]="'Sessions'"
+      [title]="'Battery'"
       color="danger"
     >
       <ng-template cTemplateId="widgetValueTemplate" ngPreserveWhitespaces>
-        <span>44K</span>
+        <span>Battery Range: </span>
+        <br/>
+        <span> {{ batteryRange?.min }}°C - {{ batteryRange?.max }}°C</span>
         <span class="fw-normal" style="font-size: 12px;">
           (-23.6% <svg cIcon name="cilArrowBottom" size="sm"></svg>)
         </span>
