--- a/src/app/layout/default-layout/default-header/default-header.component.html
+++ b/src/app/layout/default-layout/default-header/default-header.component.html
@@ -12,7 +12,7 @@
     </button>
     <c-header-nav class="d-none d-md-flex">
       <c-nav-item>
-        <a cNavLink routerLink="/dashboard" routerLinkActive="active">Dashboard</a>
+        <a cNavLink routerLink="/dashboard" routerLinkActive="active">Crane Monitoring Dashboard</a>
       </c-nav-item>
       <c-nav-item>
         <a cNavLink routerLink="/users" routerLinkActive="active">Users</a>
@@ -61,7 +61,7 @@
       <c-avatar
         shape="rounded-1"
         [size]="'md'"
-        src="./assets/images/avatars/8.jpg"
+        src="./assets/images/avatars/2.jpg"
         status="success"
         textColor="primary"
       />
